--- a/assets/styles.css
+++ b/assets/styles.css
@@ -50,7 +50,8 @@ table {
 /* ==================================
 MAIN HEADER
 ===================================== */
-body {
+body, * {
+  box-sizing: block;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -59,31 +60,52 @@ body {
   height: 1040px;
 }
 
-h1.main{
+h1.main-header{
   font-size: 30px;
-  width: 75%rem;
+  padding-bottom: 10px;
+  margin-bottom: 50px;
+  border-bottom: 5px solid black;
+  width: 75%;
 }
-
 /* ===================================
 MAIN BODY
 ====================================== */
 
 div {
-  width: 30%;
+  width; 33.33%
 }
+
 .group {
   float: left;
-
+  margin: 50px 20px;
+  padding: 20px;
+  background-color: cornsilk;
+  border: 5px solid tomato;
 }
 
 img {
   width:300px;
   height:200px;
-  border: 5px solid tomato;
-  padding-block: 20px filled cornsilk;
-
 }
 
-/* =====================================
-MAIN FOOTER
-======================================== */
+img.favorite {
+  border-color: slateblue;
+}
+
+p {
+  text-align: center;
+}
+
+/* LINK STYLING */
+
+a:link, a:visited {
+  background-color: rgba(255, 99, 71, 0.5);
+  color:white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+
+}
+a:hover, a:active:not(.favorite-link) {
+  background-color: tomato;
+}
